k8s_manifests/webapp/website-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: apache
          image: selansis/k8s_challenge:arm
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
                httpGet:
                  path: /index.php
                  port: 80
                initialDelaySeconds: 15
                periodSeconds: 5
          livenessProbe:
                httpGet:
                  path: /index.php
                  port: 80
                initialDelaySeconds: 15
                periodSeconds: 5    
          resources:
            requests:
              memory: "2Gi"
              cpu: 1
