k8s_manifests/webapp/website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
  type: NodePort
