k8s_manifests/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
spec:
  rules:
  - http:  # <--- Brak hosta (działa dla dowolnego żądania)
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80
